# cli_pretty_table

./: README.md  cli_pretty_table.py  pyproject.toml  requirements.txt  setup.py  test.py
cli_pretty_table/: __init__.py  cli_pretty_table.py
